# agent-lab-ui

./: .firebaserc  .gitignore  Getting_Started.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  roadmap.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md
.github/scripts/: collect_metrics.py  update_version.py  update_version_json.sh
.github/workflows/: collect_metrics.yml  create-release.yml  deploy-functions.yml  deploy-indexes-and-rules.yml  deploy-indexes.yml  deploy-my-fork.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  sync-upstream.yml  upstream-pr-checks.yml
docs/: running-stdio-mcp-server-on-cloudrun.md  syncing.md
docs/cloudrun-a2a/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  requirements.txt
docs/cloudrun-mcp/: readme.md
functions/: gofannon_manifest.json  main.py  package.json  requirements.txt
functions/common/: adk_helpers.py  config.py  core.py  utils.py
functions/handlers/: __init__.py  a2a_handler.py  context_handler.py  gofannon_handler.py  mcp_handler.py  vertex_agent_handler.py
public/: appConfig.json  index.html  manifest.json  version.json
src/: App.js  firebaseConfig.js  index.js  react-app-env.d.ts
src/constants/: agentConstants.js  permissionsConstants.js  platformConstants.js
src/contexts/: AuthContext.js  ConfigContext.js  ThemeContext.js
src/hooks/: useAuth.js
src/pages/: AboutPage.js  AdminPage.js  (+18 more)
(+79 files in other folders)
